Assegnazione ruoli server client + coda

--- a/public/chat.html
+++ b/public/chat.html
@@ -9,10 +9,23 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <script src="libraries/p5.min.js"></script>
+    <script src="libraries/p5.sound.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
   </head>
 
   <body>
+    
+    <a href="index.html">index</a>
     <script src="sketch.js"></script>
   </body>
 </html>
+
+<link rel="stylesheet" >
+
+<div class="topnav" id="myTopnav">
+  <a href="send.html">Send</a>
+  <a href="collect.html">Collect</a>
+  <a href="chat.html"class="active">Chat</a>
+  <a href="intro.html">Exit</a>
+  </a>
+</div>
