--- a/public/intro.html
+++ b/public/intro.html
@@ -9,10 +9,12 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <script src="libraries/p5.min.js"></script>
+    <script src="libraries/p5.sound.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
   </head>
 
   <body>
+    <a href="index.html">index</a>
     <script src="sketch.js"></script>
   </body>
 </html>
