fine parte logica
aggiunta della consegna dei messaggi da parte del server con tutti i controlli del caso

--- a/public/serverIndex.html
+++ b/public/serverIndex.html
@@ -19,6 +19,20 @@
       <button type="click" id="collect3" class="collect">collect3</button>
       <button type="click" id="collect4" class="collect">collect4</button>
     </div>
+    <div id="deliver container">
+      <button type="click" style="display: none" class="deliver">
+        deliver1
+      </button>
+      <button type="click" style="display: none" class="deliver">
+        deliver2
+      </button>
+      <button type="click" style="display: none" class="deliver">
+        deliver3
+      </button>
+      <button type="click" style="display: none" class="deliver">
+        deliver4
+      </button>
+    </div>
 
     <script src="serverinoSketch.js"></script>
   </body>
