--- a/public/serverIndex.html
+++ b/public/serverIndex.html
@@ -34,6 +34,6 @@
       </button>
     </div>
 
-    <script src="serverino_sketch.js"></script>
+    <script src="serverinoSketch.js"></script>
   </body>
 </html>
