Blocco bottone se stanza piena

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Sketch</title>
+    <title>Introduzione</title>
 
     <link rel="stylesheet" type="text/css" href="style.css" />
 
@@ -19,7 +19,7 @@
     </form>
 
     <a href="globalChat_index.html" style="display: none;" id="lim-enter"><button>SONO LA LIM</button></a>
-    <a href="client_index.html">PARTECIPA</a>
+    <a href="client_index.html" class="enter-room-button">PARTECIPA</a>
 
     <script src="sketch.js"></script>
   </body>
