--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,8 @@
   </head>
 
   <body>
-    <form id="send-container">
-      <input type="text" id="message-input" />
-      <button type="submit" id="send-button">send</button>
-    </form>
 
+    BENVENUTO! 
     <a href="globalChat_index.html" style="display: none;" id="lim-enter"><button>SONO LA LIM</button></a>
     <a href="client_index.html" class="enter-room-button">PARTECIPA</a>
 
