--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,9 @@
 
     BENVENUTO! 
     <a href="globalChat_index.html" style="display: none;" id="lim-enter"><button>SONO LA LIM</button></a>
-    <a href="client_index.html" class="enter-room-button">PARTECIPA</a>
+    <a class="enter-room-button">PARTECIPA</a>
 
     <script src="sketch.js"></script>
+
   </body>
 </html>
