--- a/public/client_index.html
+++ b/public/client_index.html
@@ -14,12 +14,26 @@
 
   <body>
 
-    <div class="client">
-      <form id="send-container">
-        <input type="text" id="message-input" />
-        <button type="submit" id="send-button">send</button>
-      </form>
+    <div class="topnav">
+      <div class="navbtn active" id="send">Send</div>
+      <div class="navbtn" id="collect">Collect</div>
+      <div class="navbtn" id="chat">Chat</div>
+      <a href="index.html" class="navbtn" id="exit"> Exit </a>
     </div>
+  
+      <!-- SEND -->
+      <div class="send-container container active">
+          <div class="box" id="ascicanvas"></div>
+          <input class="box" placeholder="Write something" type="text" id="message-input" name="input">
+          <div class="btn" type="submit" id="send-button">Package data</div>
+      </div>
+
+      <!-- CHAT -->
+      <div class="chat-container container">
+        <div class="messages-container">
+          
+        </div>
+      </div>
 
     <script src="client_sketch.js"></script>
   </body>
