chat quasi pronta

--- a/public/globalChat_index.html
+++ b/public/globalChat_index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Introduzione</title>
+    <title>Room</title>
 
     <link rel="stylesheet" type="text/css" href="style.css" />
 
@@ -14,12 +14,18 @@
 
   <body>
 
-    BENVENUTO! 
-    <a href="globalChat_index.html" style="display: none;" id="lim-enter"><button>SONO LA LIM</button></a>
-    <a class="enter-room-button">PARTECIPA</a>
-    <a class="access-chat" href="globalChat_index.html"> SONO LA CHAT </a>
+    <div class="topnav">
+      <div class="navbtn" id="chat">Chat</div>
+    </div>
+  
+    <!-- CHAT -->
+      <div class="chat-container container">
+        <div class="messages-container">
+          
+        </div>
+      </div>
 
-    <script src="sketch.js"></script>
+    <script src="globalChat_sketch.js"></script>
 
   </body>
 </html>
