--- a/public/client_index.html
+++ b/public/client_index.html
@@ -35,6 +35,12 @@
         </div>
       </div>
 
+      <!-- COLLECT -->
+      <div class="collect-container container">
+        <div class="camera-container"></div>
+        <h2>Collect other users messages from the server</h2>
+      </div>
+
     <script src="client_sketch.js"></script>
   </body>
 </html>
