client emette suono

--- a/public/Scanner.html
+++ b/public/Scanner.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+    <p>Threshold: <input type="range" id="thresholdAmount" value="10"></p>
+    <p>Percentage matching pixels: <span id="percentWhite">0</span>%</p>
+
     <script src="SketchScanner.js"></script>
 </body>
 
