--- a/public/client_index.html
+++ b/public/client_index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" />
 
     <script src="libraries/p5.min.js"></script>
+    <script src="libraries/p5.sound.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
   </head>
 
