scanner colori funzionante

--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,12 @@
   </head>
 
   <body>
-
-    BENVENUTO! 
-    <a href="globalChat_index.html" style="display: none;" id="lim-enter"><button>SONO LA LIM</button></a>
+    BENVENUTO!
+    <a href="globalChat_index.html" style="display: none" id="lim-enter"><button>SONO LA LIM</button></a>
     <a class="enter-room-button">PARTECIPA</a>
     <a class="access-chat" href="globalChat_index.html"> SONO LA CHAT </a>
+    <a href="Scanner.html"> SCANNER </a>
 
     <script src="sketch.js"></script>
-
   </body>
 </html>
