--- a/public/client_index.html
+++ b/public/client_index.html
@@ -13,32 +13,35 @@
   </head>
 
   <body>
-
     <div class="topnav">
       <div class="navbtn active" id="send">Send</div>
       <div class="navbtn" id="collect">Collect</div>
       <div class="navbtn" id="chat">Chat</div>
-      <a href="index.html" class="navbtn" id="exit"> Exit </a>
+      <a href="index.html" class="navbtn" id="exit"> Restart </a>
     </div>
-  
-      <!-- SEND -->
-      <div class="send-container container">
-          <div class="box" id="ascicanvas"></div>
-          <input class="box" placeholder="Write something" type="text" id="message-input" name="input">
-          <div class="btn" type="submit" id="send-button">Package data</div>
-      </div>
 
-      <!-- CHAT -->
-      <div class="chat-container container">
-        <div class="messages-container">
-          
-        </div>
-      </div>
+    <!-- SEND -->
+    <div class="send-container container active">
+      <div class="box" id="ascicanvas"></div>
+      <input
+        class="box"
+        placeholder="Write something"
+        type="text"
+        id="message-input"
+        name="input"
+      />
+      <div class="btn" type="submit" id="send-button">Package data</div>
+    </div>
 
-      <!-- COLLECT -->
-      <div class="collect-container container active">
-        <div class="camera-container"></div>
-      </div>
+    <!-- CHAT -->
+    <div class="chat-container container">
+      <div class="messages-container"></div>
+    </div>
+
+    <!-- COLLECT -->
+    <div class="collect-container container">
+      <div class="camera-container"></div>
+    </div>
 
     <script src="client_sketch.js"></script>
   </body>
