--- a/public/client_index.html
+++ b/public/client_index.html
@@ -17,7 +17,7 @@
       <div class="navbtn active" id="send">Send</div>
       <div class="navbtn" id="collect">Collect</div>
       <div class="navbtn" id="chat">Chat</div>
-      <a href="index.html" class="navbtn" id="exit"> Exit </a>
+      <a href="index.html" class="navbtn" id="exit"> Restart </a>
     </div>
 
     <!-- SEND -->
