--- a/public/serverino_index.html
+++ b/public/serverino_index.html
@@ -16,7 +16,7 @@
     <div class="topnav">
       <div class="navbtn active" id="collect">Collect</div>
       <div class="navbtn" id="chat">Chat</div>
-      <a href="index.html" class="navbtn" id="exit"> Exit </a>
+      <a href="index.html" class="navbtn" id="exit"> Restart </a>
     </div>
 
     <!-- COLLECT -->
