--- a/public/serverino_index.html
+++ b/public/serverino_index.html
@@ -28,6 +28,8 @@
         </div>
     </div>
 
+    <div id="receive" style="display:none">oof</div>
+
     <div class="topnav">
       <div class="navbtn active" id="collect">Collect</div>
       <div class="navbtn" id="chat">Chat</div>
@@ -38,7 +40,7 @@
     <div class="collect-container container active">
       <!-- <div class="camera-container"></div> -->
     </div>
-    <div class="box" id="ascicanvas" style="display:none"></div>
+    <div class="box" id="ascicanvas2" style="display:none"></div>
     <div class="bottomnav" type="submit" id="done-button1" style="display: none; margin-top: 9px">Done</div>
 
     <!-- CHAT -->
@@ -70,19 +72,126 @@
 
     <script src="serverino_sketch.js"></script>
 
+
     <!-- *************************** CODICE ASCII *************************** -->
 
-    <script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
+<script async src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
+
+<script type="importmap">
+{
+  "imports": {
+    "three": "../node_modules/three/build/three.module.js",
+    "three/addons/": "./jsm/"
+  }
+}
+</script>
+
+<script type="module">
+
+import * as THREE from "three";
+
+import { AsciiEffect } from "three/addons/effects/AsciiEffect.js";
+import { PolyhedronGeometry } from "./node_modules/three/src/geometries/PolyhedronGeometry.js";
+
+
+let camera, scene, renderer;
+let cameraTarget = new THREE.Vector3(0, 0, 0);
+let effect = [];
+let sphere;
+let a = 0;
+const start = Date.now();
+
+let directionalLight1;
+let directionalLight2;
+
+let messageReceived = document.getElementById("receive").innerText;
+let raggioServer;
+let facceServer;
+let nParoleS;
  
-    <script type="importmap">
-       {
-         "imports": {
-           "three": "../node_modules/three/build/three.module.js",
-           "three/addons/": "./jsm/"
-         }
-       }
-     </script>
- 
-     <!-- <script src="ascii.js" type="module"></script> -->
+init()
+
+
+function init() {
+  camera = new THREE.PerspectiveCamera(100, window.innerWidth / window.innerHeight, 1, 1000);
+  //camera.position.y = 150;
+  camera.position.x = 500;
+
+  scene = new THREE.Scene();
+  //scene.background = new THREE.Color( 0xff0000 );
+
+  lights();
+
+  raggioServer = Math.round(map_range(messageReceived.length, 0, 140, 120, 600));
+  nParoleS = messageReceived.split(" ").length;
+  facceServer = Math.round(map_range(nParoleS, 1, 10, 0, 5));
+
+  sphere = new THREE.Mesh(
+            new THREE.TetrahedronGeometry(raggioServer, facceServer),
+            new THREE.MeshPhongMaterial({ color: "green", flatShading: true })
+          );
+          sphere.name = "sphere";
+          sphere.receiveShadow = true;
+          sphere.castShadow = true;
+          scene.add(sphere);
+
+  renderer = new THREE.WebGLRenderer({ alpha: true });
+  renderer.setSize(window.innerWidth, window.innerHeight);
+  //renderer.setClearColor( 0xffffff, 0);
+
+  effect.push(new AsciiEffect(renderer, "8*=+-:. ", { invert: true }));
+  effect[a].setSize(window.innerWidth, window.innerHeight);
+  effect[a].domElement.style.color = "black";
+  //effect[a].domElement.style.backgroundColor = 'white';
+
+  // Special case: append effect.domElement, instead of renderer.domElement.
+  // AsciiEffect creates a custom domElement (a div container) where the ASCII elements are placed.
+  document.getElementById("ascicanvas2").appendChild(effect[a].domElement);
+  window.addEventListener("resize", onWindowResize);
+  animate();
+}
+
+function onWindowResize() {
+  camera.aspect = window.innerWidth / window.innerHeight;
+  camera.updateProjectionMatrix();
+
+  renderer.setSize(window.innerWidth, window.innerHeight);
+  effect[a].setSize(window.innerWidth, window.innerHeight);
+}
+
+function animate() {
+  requestAnimationFrame(animate);
+  render();
+}
+
+function render() {
+  const timer = Date.now() - start;
+  camera.lookAt(cameraTarget);
+  //camera.rotation.x = timer * 0.0008;
+  scene.rotation.y = timer * 0.0005;
+
+  effect[a].render(scene, camera);
+}
+
+
+function map_range(value, low1, high1, low2, high2) {
+  return low2 + ((high2 - low2) * (value - low1)) / (high1 - low1);
+}
+
+
+function lights() {
+  directionalLight1 = new THREE.DirectionalLight(0xffffff);
+  directionalLight1.position.set(10, 800, 500);
+  directionalLight1.intensity = 10;
+  scene.add(directionalLight1);
+
+  directionalLight2 = new THREE.DirectionalLight(0xffffff);
+  directionalLight2.position.set(-500, -500, -500);
+  scene.add(directionalLight2);
+}
+</script>
+
   </body>
+
+  
 </html>
