--- a/public/serverino_index.html
+++ b/public/serverino_index.html
@@ -38,15 +38,17 @@
 
     <!-- COLLECT -->
     <div class="collect-container container active">
-      <!-- <div class="camera-container"></div> -->
+      <div class="camera-container"></div>
+      <h1>Collect a message from one of the clients</h1>
     </div>
-    <div class="box" id="ascicanvas2" style="display:none"></div>
-    <div class="bottomnav" type="submit" id="done-button1" style="display: none; margin-top: 9px">Done</div>
 
     <!-- CHAT -->
     <div class="chat-container container">
       <div class="messages-container"></div>
     </div>
+
+    <div class="box" id="ascicanvas2" style="display:none"></div>
+    <div class="bottomnav" type="submit" id="done-button1" style="display: none; margin-top: 9px">Done</div>
 <!-- 
     <div id="collect-buttons">
       <button type="click" id="collect1" class="collect">collect1</button>
