La chat scrolla e feedback dopo scan da client

--- a/public/client_index.html
+++ b/public/client_index.html
@@ -70,11 +70,13 @@
     <!-- COLLECT -->
     <div class="collect-container container">
       <div class="camera-container"></div>
+      <h1>Frame the screen of the server to collect the message</h1>
     </div>
 
     <!-- CHAT -->
     <div class="chat-container container">
-      <div class="messages-container"></div>
+      <div class="messages-container">
+      </div>
     </div>
 
     <script src="client_sketch.js"></script>
