--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 
       <div class="mySlides" style="max-width: 90%;">
         <h1 style="font-size: 80pt; line-height: 90%; color: black; position: relative; z-index: 10; margin-bottom: 30px;">Just <br> a chat</h1>
-        <p style="font-size: 30pt; line-height: 100%; color: black; position: relative; z-index: 10"> But offline and you are the clients and the server </p>
+        <p style="font-size: 30pt; line-height: 100%; color: black; position: relative; z-index: 10"> But you are the clients and the server </p>
       </div>
 
       <div class="mySlides">
