--- a/public/serverino_index.html
+++ b/public/serverino_index.html
@@ -40,6 +40,7 @@
     <div class="collect-container container active">
       <div class="camera-container"></div>
       <h1>Frame the screen of a client to collect the message</h1>
+      
     </div>
 
     <!-- CHAT -->
@@ -84,27 +85,31 @@ const start = Date.now();
 let directionalLight1;
 let directionalLight2;
 
-let messageReceived = document.querySelector("#receive").innerHTML;
-let raggioServer;
-let facceServer;
+let messageReceived = document.getElementById("receive").innerHTML;
+let raggioServer = 240;
+let facceServer = 3;
 let nParoleS;
 
+$("body").on('DOMSubtreeModified', "#receive", function() {
+  raggioServer = Math.round(map_range(messageReceived.length, 0, 50, 120, 600));
+  nParoleS = messageReceived.split(" ").length;
+  facceServer = Math.round(map_range(nParoleS, 1, 10, 0, 5)); 
+  
+  init();
+});
 
+init();
 
 function init() {
   console.log("OOOOOO");
   camera = new THREE.PerspectiveCamera(100, window.innerWidth / window.innerHeight, 1, 1000);
-  //camera.position.y = 150;
   camera.position.x = 500;
 
   scene = new THREE.Scene();
-  //scene.background = new THREE.Color( 0xff0000 );
 
   lights();
 
-  raggioServer = Math.round(map_range(messageReceived.length, 0, 140, 120, 600));
-  nParoleS = messageReceived.split(" ").length;
-  facceServer = Math.round(map_range(nParoleS, 1, 10, 0, 5));
+
 
   sphere = new THREE.Mesh(
      new THREE.TetrahedronGeometry(raggioServer, facceServer),
@@ -114,12 +119,10 @@ function init() {
 
   renderer = new THREE.WebGLRenderer({ alpha: true });
   renderer.setSize(window.innerWidth, window.innerHeight);
-  //renderer.setClearColor( 0xffffff, 0);
 
   effect.push(new AsciiEffect(renderer, "8*=+-:. ", { invert: true }));
   effect[a].setSize(window.innerWidth, window.innerHeight);
   effect[a].domElement.style.color = "black";
-  //effect[a].domElement.style.backgroundColor = 'white';
 
   // Special case: append effect.domElement, instead of renderer.domElement.
   // AsciiEffect creates a custom domElement (a div container) where the ASCII elements are placed.
@@ -148,7 +151,6 @@ function render() {
   scene.rotation.y = timer * 0.0005;
 
   effect[a].render(scene, camera);
-  init();
 
 }
 
